# polyintersection

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: documentation.cmake  environment.cmake  googletest.cmake  macros.cmake
data/: almost-ring.txt  corner.txt  non-convex.txt  octo3x3.txt  triangle1.txt  triangle2.txt  triangle3.txt  triangle4.txt  triangle5.txt  triangle6.txt
dox/: Doxyfile.in
src/: CMakeLists.txt
src/PolyApp/: CMakeLists.txt  PolyApp.cpp
src/PolyLib/: BinaryTree.cpp  BinaryTree.h  BinaryTreeIntersector.cpp  BinaryTreeIntersector.h  BndRect.cpp  BndRect.h  CMakeLists.txt  ClosedPolygon.h  Defines.h  PolyIO.cpp  PolyIO.h  PolyIntersection.cpp  PolyIntersection.h  PolyTools.cpp  PolyTools.h
test/: CMakeLists.txt  PolyLibTest.cpp  PolyLibTestConfig.h.in
